[gd_scene load_steps=5 format=2]

[ext_resource path="res://Art/Player/body.png" type="Texture" id=1]
[ext_resource path="res://Characters/Player/player_leg.tscn" type="PackedScene" id=2]
[ext_resource path="res://Characters/Player/player_body.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 15.3238

[node name="player_body" type="KinematicBody2D"]
position = Vector2( 0, 0.166855 )
script = ExtResource( 3 )

[node name="Right_Legs" type="Node2D" parent="."]
position = Vector2( 0, -6.23629 )

[node name="player_leg" parent="Right_Legs" instance=ExtResource( 2 )]
position = Vector2( 0, 0.15749 )
rotation = 1.01404

[node name="player_leg2" parent="Right_Legs" instance=ExtResource( 2 )]
position = Vector2( 5, 0 )
rotation = 1.01578

[node name="player_leg3" parent="Right_Legs" instance=ExtResource( 2 )]
position = Vector2( 7.5, 0 )
rotation = 1.39626

[node name="Left_Legs" type="Node2D" parent="."]
position = Vector2( 0, -6.23629 )

[node name="player_leg" parent="Left_Legs" instance=ExtResource( 2 )]
rotation = -4.31445
flipped = false

[node name="player_leg2" parent="Left_Legs" instance=ExtResource( 2 )]
position = Vector2( -5, 0 )
rotation = -4.18879
flipped = false

[node name="player_leg3" parent="Left_Legs" instance=ExtResource( 2 )]
position = Vector2( -7.5, 0 )
rotation = -4.44186
flipped = false

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
one_way_collision_margin = 0.0

[node name="LowMidCheck" type="RayCast2D" parent="CollisionShape"]
enabled = true
cast_to = Vector2( 0, 12 )

[node name="HighMidCheck" type="RayCast2D" parent="CollisionShape"]
enabled = true
cast_to = Vector2( 0, 25 )

[node name="RightCheck" type="RayCast2D" parent="CollisionShape"]
position = Vector2( 15, 0 )
rotation = 0.261799
enabled = true
cast_to = Vector2( 0, 150 )

[node name="LeftCheck" type="RayCast2D" parent="CollisionShape"]
position = Vector2( -15, 0 )
rotation = -0.261799
enabled = true
cast_to = Vector2( 0, 150 )

[node name="LiftCheckRight" type="RayCast2D" parent="CollisionShape"]
position = Vector2( 15, 0 )
enabled = true
cast_to = Vector2( 0, 15 )

[node name="LiftCheckLeft" type="RayCast2D" parent="CollisionShape"]
position = Vector2( -15, 0 )
enabled = true
cast_to = Vector2( 0, 15 )

[node name="LeftRotateCheck" type="RayCast2D" parent="CollisionShape"]
position = Vector2( -11.8425, 0 )
enabled = true
cast_to = Vector2( 0, 45 )

[node name="RightRotateCheck" type="RayCast2D" parent="CollisionShape"]
position = Vector2( 12, 0 )
enabled = true
cast_to = Vector2( 0, 45 )

[node name="RightWallRotateCheck" type="RayCast2D" parent="CollisionShape"]
position = Vector2( 15, -7 )
enabled = true
cast_to = Vector2( 8, 0 )

[node name="LeftWallRotateCheck" type="RayCast2D" parent="CollisionShape"]
position = Vector2( -15.145, -7 )
enabled = true
cast_to = Vector2( -10, 0 )
